Basic nextauth with google

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://amir:5391@localhost:5432/merystore?schema=public"
+
+GOOGLE_CLIENT_ID="10558029407-k0fg6pu1m02h6va3dj2f3sm4r9dbjavr.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_SECRET="dC/cKP0kTESy3q7UrVdVWoEC2kKg5ITrKsutccvnFz8="
