--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.8",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
@@ -19,6 +17,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
