--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.8",
-    "@prisma/client": "^5.6.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
-    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
@@ -33,7 +29,6 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
